<resources>
    <string name="app_name">Lab8</string>
    <string name="add_entry">增加条目</string>
    <string name="name">姓名</string>
    <string name="birth">生日</string>
    <string name="gift">礼物</string>
    <string name="input_name">姓名: </string>
    <string name="input_birth">生日: </string>
    <string name="input_gift">礼物: </string>
    <string name="add">增加</string>
    <string name="phone">电话: </string>
</resources>
